Removed: Unused camera configuration

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -78,45 +78,6 @@ homeassistant:
     - /tmp
     - /config/www/cams
 
-stream:
-
-android_ip_webcam:
-  - host: 192.168.1.175
-    port: 8080
-    username: tdroza
-    password: !secret ipcam_password
-    sensors:
-      - battery_level
-      - battery_temp
-      - battery_voltage
-      - light
-      - motion
-      - sound
-    switches:
-      - exposure_lock
-      - ffc
-      - focus
-      - gps_active
-      - motion_detect
-      - night_vision
-      - overlay
-      - torch
-      - whitebalance_lock
-      - video_recording
-
-camera:
-  - platform: local_file
-    file_path: /config/www/cams/cam1.jpg
-    name: esp32cam_lastimage
-  - platform: generic
-    name: OfficeCam
-    still_image_url: https://192.168.1.187/cgi-bin/currentpic.cgi
-    stream_source: rtsp://192.168.1.187:8554/unicast 
-    verify_ssl: false
-    username: root
-    password: !secret ipcam_password
-    authentication: basic
-
 ifttt:
   key:
     tom: !secret tom_ifttt
@@ -125,7 +86,7 @@ ifttt:
 google_assistant: !include includes/google_assistant.yaml
 
 zoom: 
-    client_id: QUqJ2gcaSqaUAQTuo5xQaw
-    client_secret: hu68a0bdTFx6DYgMF3UBpTHpiCdxApq8
-    verification_token: KRe4n2QvTZGn7HmaNVVeEQ
+    client_id: !secret zoom_client_id
+    client_secret: !secret zoom_client_secret
+    verification_token: !secret zoom_verification_token
     
