Changed: Light colour set to yellow when turned on by motion sensor

--- a/automations.yaml
+++ b/automations.yaml
@@ -686,11 +686,12 @@
   condition:
   - condition: time
     after: 07:30
-    before: '19:30'
+    before: '20:00'
   action:
   - service: light.turn_on
     data:
       entity_id: '{{ light_map[trigger.entity_id] }}'
+      color_name: yellow
   variables:
     light_map:
       binary_sensor.seb_d1_motion:
