--- a/automations.yaml
+++ b/automations.yaml
@@ -789,6 +789,28 @@
   mode: single
 - id: handle_tag_scan
   alias: 'NFC: Media Player'
+  trigger:
+  - platform: event
+    event_type: tag_scanned
+  condition:
+  - condition: template
+    value_template: '{{ trigger.event.data.tag_id in tags }}'
+  - condition: template
+    value_template: '{{ trigger.event.data.device_id in media_players }}'
+  - condition: template
+    value_template: '{{ states(''sensor.time'') < states(''input_datetime.boys_bedtime'')
+      }}'
+  action:
+  - variables:
+      media_player_entity_id: '{{ media_players[trigger.event.data.device_id] }}'
+      media_content_id: '{{ tags[trigger.event.data.tag_id].media_content_id }}'
+      media_content_type: '{{ tags[trigger.event.data.tag_id].media_content_type }}'
+  - service: media_player.play_media
+    data:
+      entity_id: '{{ media_player_entity_id }}'
+      media_content_id: '{{ media_content_id }}'
+      media_content_type: '{{ media_content_type }}'
+  - delay: 5
   mode: single
   variables:
     media_players:
@@ -902,23 +924,6 @@
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FJmpqpkXqfCBjrTm5S67I%2Frecordings%2FbuNFPC9gGbIIkZQokx1g%2Frecordings%2Faudio.mp3?alt=media&token=3215cdfe-9add-464d-8f92-e69b7737bedc
         media_content_type: music
         title: Dinky Donkey
-  trigger:
-    platform: event
-    event_type: tag_scanned
-  condition:
-  - '{{ trigger.event.data.tag_id in tags }}'
-  - '{{ trigger.event.data.device_id in media_players }}'
-  action:
-  - variables:
-      media_player_entity_id: '{{ media_players[trigger.event.data.device_id] }}'
-      media_content_id: '{{ tags[trigger.event.data.tag_id].media_content_id }}'
-      media_content_type: '{{ tags[trigger.event.data.tag_id].media_content_type }}'
-  - service: media_player.play_media
-    data:
-      entity_id: '{{ media_player_entity_id }}'
-      media_content_id: '{{ media_content_id }}'
-      media_content_type: '{{ media_content_type }}'
-  - delay: 5
 - id: '1602617983905'
   alias: 'Zoom: Notify start/end call'
   description: ''
@@ -1072,46 +1077,17 @@
   mode: single
 - id: '1604341003387'
   alias: 'NFC: Podcast Player'
-  mode: restart
-  variables:
-    media_players:
-      4dd136882e204aec5b9809887714f25b: media_player.seb_s_home
-      43ddd1e400d41d9d547f7bc24a95f86d: media_player.reuben_s_room_speaker
-    tags:
-      04-7B-FC-EA-83-6B-80:
-        title: Story Time
-        podcast_counter: counter.podcast_story_time
-        sensor: sensor.podcast_story_time
-      04-35-6F-AA-ED-6C-80:
-        title: But Why
-        podcast_counter: counter.podcast_but_why
-        sensor: sensor.podcast_but_why
-      04-58-6E-AA-ED-6C-80:
-        title: Goodnight Stories for Rebel Girls
-        podcast_counter: counter.podcast_goodnight_stories
-        sensor: sensor.podcast_goodnight_stories
-      04-55-6F-AA-ED-6C-80:
-        title: Story Pirates
-        podcast_counter: counter.podcast_story_pirates
-        sensor: sensor.podcast_story_pirates
-      04-51-6F-AA-ED-6C-80:
-        title: Maddie's Sound Explorers
-        podcast_counter: counter.podcast_maddie_s_sound_explorers
-        sensor: sensor.podcast_sound_explorers
-      04-31-6F-AA-ED-6C-80:
-        title: Marvellous Musical
-        podcast_counter: counter.podcast_marvellous_musical
-        sensor: sensor.podcast_marvellous_musical
-      04-4D-6F-AA-ED-6C-80:
-        title: Peace Out
-        podcast_counter: counter.podcast_peace_out
-        sensor: sensor.podcast_peace_out
   trigger:
-    platform: event
+  - platform: event
     event_type: tag_scanned
   condition:
-  - '{{ trigger.event.data.tag_id in tags }}'
-  - '{{ trigger.event.data.device_id in media_players }}'
+  - condition: template
+    value_template: '{{ trigger.event.data.tag_id in tags }}'
+  - condition: template
+    value_template: '{{ trigger.event.data.device_id in media_players }}'
+  - condition: template
+    value_template: '{{ states(''sensor.time'') < states(''input_datetime.boys_bedtime'')
+      }}'
   action:
   - variables:
       number_of_podcasts: '{{ state_attr(tags[trigger.event.data.tag_id].sensor, ''entries'')
@@ -1158,6 +1134,40 @@
     - service: counter.decrement
       data:
         entity_id: '{{podcast_counter}}'
+  mode: restart
+  variables:
+    media_players:
+      4dd136882e204aec5b9809887714f25b: media_player.seb_s_home
+      43ddd1e400d41d9d547f7bc24a95f86d: media_player.reuben_s_room_speaker
+    tags:
+      04-7B-FC-EA-83-6B-80:
+        title: Story Time
+        podcast_counter: counter.podcast_story_time
+        sensor: sensor.podcast_story_time
+      04-35-6F-AA-ED-6C-80:
+        title: But Why
+        podcast_counter: counter.podcast_but_why
+        sensor: sensor.podcast_but_why
+      04-58-6E-AA-ED-6C-80:
+        title: Goodnight Stories for Rebel Girls
+        podcast_counter: counter.podcast_goodnight_stories
+        sensor: sensor.podcast_goodnight_stories
+      04-55-6F-AA-ED-6C-80:
+        title: Story Pirates
+        podcast_counter: counter.podcast_story_pirates
+        sensor: sensor.podcast_story_pirates
+      04-51-6F-AA-ED-6C-80:
+        title: Maddie's Sound Explorers
+        podcast_counter: counter.podcast_maddie_s_sound_explorers
+        sensor: sensor.podcast_sound_explorers
+      04-31-6F-AA-ED-6C-80:
+        title: Marvellous Musical
+        podcast_counter: counter.podcast_marvellous_musical
+        sensor: sensor.podcast_marvellous_musical
+      04-4D-6F-AA-ED-6C-80:
+        title: Peace Out
+        podcast_counter: counter.podcast_peace_out
+        sensor: sensor.podcast_peace_out
 - id: '1604656539815'
   alias: Turn on living room lights when door opened
   description: ''
@@ -1224,9 +1234,11 @@
     target:
       entity_id:
       - light.seb_s_colour
-  - wait_template: ''
-    timeout: 00:15:00
-    continue_on_timeout: true
+  - delay:
+      hours: 0
+      minutes: 15
+      seconds: 0
+      milliseconds: 0
   - service: light.turn_off
     data:
       entity_id:
@@ -1234,7 +1246,7 @@
       - light.sebs_lamp
       - light.reuben_ceiling
       - light.rname
-  mode: restart
+  mode: single
 - id: '1611402292310'
   alias: 'Lights: turn on main bedroom light for 5 minutes when for opens'
   description: ''
@@ -1423,3 +1435,25 @@
     target:
       entity_id: light.living_room_2
   mode: single
+- id: '1618222807946'
+  alias: 'NFC: Tag scanned after 20:30 plays bedtime message'
+  description: Time cut-off is set by `input_datetime.boys_bedtime`
+  trigger:
+  - platform: event
+    event_type: tag_scanned
+  condition:
+  - condition: template
+    value_template: '{{ states(''sensor.time'') > states(''input_datetime.boys_bedtime'')
+      }}'
+  - condition: template
+    value_template: '{{ trigger.event.data.device_id in media_players }}'
+  action:
+  - service: tts.google_translate_say
+    data:
+      entity_id: '{{ media_players[trigger.event.data.device_id] }}'
+      message: Sorry, I can't play that for you because it's time to go to sleep
+  mode: single
+  variables:
+    media_players:
+      4dd136882e204aec5b9809887714f25b: media_player.seb_s_home
+      43ddd1e400d41d9d547f7bc24a95f86d: media_player.reuben_s_room_speaker
