--- a/esphome/sensor_d1mini_dht22_green.yaml
+++ b/esphome/sensor_d1mini_dht22_green.yaml
@@ -32,7 +32,7 @@ sensor:
       name: "${friendly_name} Humidity"
   - platform: adc
     pin: VCC
-    name: "Living Room Voltage"
+    name: "${friendly_name} Voltage"
     update_interval: 600s
 
 binary_sensor:
