--- a/groups.yaml
+++ b/groups.yaml
@@ -13,10 +13,10 @@ all_my_lights:
     - light.lightstrip
     - light.living_room
     - light.main_bedroom
-    - light.reuben_s_bedroom
-    - light.reuben
+    - light.reuben_ceiling
+    - light.rname
     - light.bloom
-    - light.seb_s_colour
+    - light.seb_s_ceiling
     - light.sebs_lamp
     - light.second_bedroom_light
     - light.desk
