Added: Re-added the config for R's NFC Ring

--- a/automations.yaml
+++ b/automations.yaml
@@ -838,6 +838,10 @@
         media_content_id: https://tdroza.duckdns.org/local/bomb.mp3
         media_content_type: music
         title: Fact Bomb!
+      04-7B-FC-EA-83-6B-80:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F4Z0FQvDMnNyIOtJeBa93%2Frecordings%2FHzFp8GQRWwFEbkB4hSLw%2Frecordings%2Faudio.mp3?alt=media&token=b107fb98-e8af-4d60-908c-3be902cc76f6
+        media_content_type: music
+        title: Star Wars (NFC Ring)
       04-5C-6E-AA-ED-6C-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F4Z0FQvDMnNyIOtJeBa93%2Frecordings%2FHzFp8GQRWwFEbkB4hSLw%2Frecordings%2Faudio.mp3?alt=media&token=b107fb98-e8af-4d60-908c-3be902cc76f6
         media_content_type: music
