--- a/automations.yaml
+++ b/automations.yaml
@@ -838,10 +838,6 @@
         media_content_id: https://tdroza.duckdns.org/local/bomb.mp3
         media_content_type: music
         title: Fact Bomb!
-      04-7B-FC-EA-83-6B-80:
-        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F4Z0FQvDMnNyIOtJeBa93%2Frecordings%2FHzFp8GQRWwFEbkB4hSLw%2Frecordings%2Faudio.mp3?alt=media&token=b107fb98-e8af-4d60-908c-3be902cc76f6
-        media_content_type: music
-        title: Star Wars (NFC Ring)
       04-5C-6E-AA-ED-6C-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F4Z0FQvDMnNyIOtJeBa93%2Frecordings%2FHzFp8GQRWwFEbkB4hSLw%2Frecordings%2Faudio.mp3?alt=media&token=b107fb98-e8af-4d60-908c-3be902cc76f6
         media_content_type: music
@@ -1161,10 +1157,6 @@
       4dd136882e204aec5b9809887714f25b: media_player.seb_s_home
       43ddd1e400d41d9d547f7bc24a95f86d: media_player.reuben_s_room_speaker
     tags:
-      04-7B-FC-EA-83-6B-80:
-        title: Story Time
-        podcast_counter: counter.podcast_story_time
-        sensor: sensor.podcast_story_time
       04-35-6F-AA-ED-6C-80:
         title: But Why
         podcast_counter: counter.podcast_but_why
@@ -1177,6 +1169,10 @@
         title: Goodnight Stories for Rebel Girls
         podcast_counter: counter.podcast_goodnight_stories
         sensor: sensor.podcast_goodnight_stories
+      04-7B-FC-EA-83-6B-80:
+        title: Story Pirates
+        podcast_counter: counter.podcast_story_pirates
+        sensor: sensor.podcast_story_pirates
       04-55-6F-AA-ED-6C-80:
         title: Story Pirates
         podcast_counter: counter.podcast_story_pirates
@@ -1406,6 +1402,13 @@
           transition: 1
         target:
           entity_id: all
+      knock_any_side: true
+      cube_knock_any:
+      - service: light.turn_off
+        target:
+          area_id: 4ff1e165afb84885be26f9e1add47e4f
+        data:
+          transition: 5
 - id: '1616499915162'
   alias: Anna's phone - smart charging
   description: ''
