--- a/includes/http.yaml
+++ b/includes/http.yaml
@@ -1,3 +1,9 @@
+use_x_forwarded_for: true
+trusted_proxies:
+  - 127.0.0.1
+  - 172.16.0.0/12
+  - ::1
+
 #base_url: https://tdroza.duckdns.org
 #ssl_certificate: /ssl/fullchain.pem
 #ssl_key: /ssl/privkey.pem
